@@ -1,3 +1,7 @@
+2012-06-21  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/arm/configure: Regenerated.
+
 2012-02-15  Khem Raj  <raj.khem@gmail.com>
 
 	[BZ #12097]
