@@ -1,3 +1,8 @@
+2012-06-21  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/hppa/configure: Regenerated.
+	* sysdeps/hppa/elf/configure: Regenerated.
+
 2011-10-21  Carlos O'Donell  <carlos@systemhalted.org>
 
 	* sysdeps/unix/sysv/linux/hppa/sys/procfs.h: Update copyright year.
